--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 #MYsql Configuration
-spring.datsource.url=jdbc:mysql://localhost:3306/epql
+spring.datasource.url=jdbc:mysql://localhost:3306/epql
 spring.datasource.username=root
 spring.datasource.password=rohit
-
 server.servlet.context-path=/api/v1.0
+
+#JPA Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
