--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,15 @@ server.servlet.context-path=/api/v1.0
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+#Email Configuration
+spring.mail.host=smtp-relay.brevo.com
+spring.mail.port=587
+spring.mail.username=87e0e5003@smtp-brevo.com
+spring.mail.password=TyLOBqNKcpVtJWRX
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.protocol=smtp
+spring.mail.properties.mail.smtp.from=rrgawanderohit@gmail.com
+
+#Logging
